OverlayRegistration marshalling WIP

--- a/conf/notlog4j2.properties
+++ b/conf/notlog4j2.properties
@@ -6,23 +6,23 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
-#appender.rolling.type = RollingFile
-#appender.rolling.name = RollingFile
-#appender.rolling.fileName = log/log.log
-#appender.rolling.filePattern = log/rolling/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
-#appender.rolling.layout.type = PatternLayout
-#appender.rolling.policies.type = Policies
-#appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-#appender.rolling.policies.time.interval = 2
+appender.rolling.type = RollingFile
+appender.rolling.name = RollingFile
+appender.rolling.fileName = log/log.log
+appender.rolling.filePattern = log/rolling/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.layout.type = PatternLayout
+appender.rolling.policies.type = Policies
+appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval = 2
 #
 rootLogger.level = debug
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
 #
-#logger.cs455.name = cs455
-#logger.cs455.level = debug
-#logger.cs455.appenderRef = STDOUT
-#logger.cs455.appenderRef.stdout.ref = STDOUT
+logger.cs455.name = cs455
+logger.cs455.level = debug
+logger.cs455.appenderRef = STDOUT
+logger.cs455.appenderRef.stdout.ref = STDOUT
 
 #logger.Server.name = Server.class
 #logger.Server.level = debug
