--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,7 +15,7 @@ appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 #appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
 #appender.rolling.policies.time.interval = 2
 #
-rootLogger.level = info
+rootLogger.level = warn
 rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
 #
