--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,20 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
+group 'org.nathan'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url 'https://repository.apache.org/snapshots' }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
+}
+
+jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it)}
 }
